mudança alguns texto

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <title>Portfólio Web</title>
 </head>
 <body>
-  <h1 class="meuNome">Tryber</h1>
-  <img src="imagem/1678922365295.jpeg" alt="Tryber sorrindo com camiseta da Trybe" id="foto">
+  <h1 class="meuNome">Rian Seabra</h1>
+  <img src="imagem/1678922365295.jpeg" alt="Tryber sorrindo  id="foto">
   <p class="descricao">Me chamo Rian<strong><em>,sou brasileir moro atualmente em Portugal</em></strong></p>
   <p class="resido"><strong>amadora- Lisboa</strong></p>
   <h2>Lista de habilidades</h2>
